Initial FearMC source release