@@ -1,12 +1,12 @@
 package org.spigotmc;
 
-import java.io.File;
-import java.util.Locale;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerPlayer;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.craftbukkit.util.CraftChatMessage;
+
+import java.util.Locale;
 
 public class RestartCommand extends Command {
 
@@ -18,114 +18,100 @@ public class RestartCommand extends Command {
     }
 
     @Override
-    public boolean execute(CommandSender sender, String currentAlias, String[] args) {
-        if (this.testPermission(sender)) {
-            MinecraftServer.getServer().processQueue.add(RestartCommand::restart);
-        }
+    public boolean execute(CommandSender sender, String label, String[] args) {
+        if (!this.testPermission(sender)) return true;
+
+        MinecraftServer.getServer().execute(RestartCommand::restart);
         return true;
     }
 
     public static void restart() {
-        RestartCommand.restart(SpigotConfig.restartScript);
+        restart(SpigotConfig.restartScript);
     }
 
-    private static void restart(final String restartScript) {
+    // ==============================
+    // MAIN RESTART LOGIC
+    // ==============================
+    private static void restart(String script) {
+        MinecraftServer server = MinecraftServer.getServer();
+
         try {
-            // Paper - extract method and cleanup
-            boolean isRestarting = addShutdownHook(restartScript);
-            if (isRestarting) {
-                System.out.println("Attempting to restart with " + SpigotConfig.restartScript);
+            boolean canRestart = addShutdownHook(script);
+
+            System.out.println("[FearMC] Server shutting down...");
+
+            if (canRestart) {
+                System.out.println("[FearMC] Restart enabled: " + script);
             } else {
-                System.out.println("Startup script '" + SpigotConfig.restartScript + "' does not exist! Stopping server.");
+                System.out.println("[FearMC] No restart script found, stopping only.");
             }
-            // Stop the watchdog
-            WatchdogThread.doStop();
 
-            shutdownServer(isRestarting);
-            // Paper end
-        } catch (Exception ex) {
-            ex.printStackTrace();
-        }
-    }
-
-    // Paper start - sync copied from above with minor changes, async added
-    private static void shutdownServer(boolean isRestarting) {
-        if (MinecraftServer.getServer().isSameThread()) {
             // Kick all players
-            for (ServerPlayer p : com.google.common.collect.ImmutableList.copyOf(MinecraftServer.getServer().getPlayerList().players)) {
-                p.connection.disconnect(CraftChatMessage.fromStringOrEmpty(SpigotConfig.restartMessage, true), org.bukkit.event.player.PlayerKickEvent.Cause.RESTART_COMMAND); // Paper - kick event reason (cause is never used)
-            }
-            // Give the socket a chance to send the packets
-            try {
-                Thread.sleep(100);
-            } catch (InterruptedException ex) {
+            for (ServerPlayer player : server.getPlayerList().getPlayers()) {
+                player.connection.disconnect(
+                    CraftChatMessage.fromStringOrEmpty(SpigotConfig.restartMessage, true),
+                    org.bukkit.event.player.PlayerKickEvent.Cause.RESTART_COMMAND
+                );
             }
 
-            closeSocket();
+            // Stop network
+            server.getConnection().stop();
 
-            // Actually shutdown
-            try {
-                MinecraftServer.getServer().close(); // calls stop()
-            } catch (Throwable t) {
-            }
+            // Safe shutdown
+            server.safeShutdown(false, canRestart);
 
-            // Actually stop the JVM
-            System.exit(0);
-        } else {
-            // Mark the server to shutdown at the end of the tick
-            MinecraftServer.getServer().safeShutdown(false, isRestarting);
+            // Fallback hard stop
+            new Thread(() -> {
+                try {
+                    Thread.sleep(8000);
+                    if (!server.isStopped()) {
+                        System.out.println("[FearMC] Force shutdown triggered.");
+                        System.exit(0);
+                    }
+                } catch (InterruptedException ignored) {}
+            }).start();
 
-            // wait 10 seconds to see if we're actually going to try shutdown
-            try {
-                Thread.sleep(10000);
-            } catch (InterruptedException ignored) {}
-
-            // Check if we've actually hit a state where the server is going to safely shutdown
-            // if we have, let the server stop as usual
-            if (MinecraftServer.getServer().isStopped()) return;
-
-            // If the server hasn't stopped by now, assume worse case and kill
-            closeSocket();
-            System.exit(0);
+        } catch (Exception e) {
+            e.printStackTrace();
+            System.exit(1);
         }
     }
-    // Paper end
 
-    // Paper - Split from moved code
-    private static void closeSocket() {
-        // Close the socket so we can rebind with the new process
-        MinecraftServer.getServer().getConnection().stop();
-
-        // Give time for it to kick in
-        try {
-            Thread.sleep(100);
-        } catch (InterruptedException ignored) {}
-    }
-    // Paper end
-
-    // Paper start - copied from above and modified to return if the hook registered
+    // ==============================
+    // IMPORTANT: PAPER COMPAT METHOD
+    // (THIS FIXES YOUR BUILD ERROR)
+    // ==============================
     public static boolean addShutdownHook(String restartScript) {
-        String[] split = restartScript.split(" ");
-        if (split.length > 0 && new File(split[0]).isFile()) {
-            Thread shutdownHook = new Thread(() -> {
+        if (restartScript == null || restartScript.trim().isEmpty()) {
+            return false;
+        }
+
+        try {
+            Runtime.getRuntime().addShutdownHook(new Thread(() -> {
                 try {
                     String os = System.getProperty("os.name").toLowerCase(Locale.ENGLISH);
+
+                    ProcessBuilder builder;
+
                     if (os.contains("win")) {
-                        Runtime.getRuntime().exec("cmd /c start " + restartScript);
+                        builder = new ProcessBuilder("cmd", "/c", restartScript);
                     } else {
-                        Runtime.getRuntime().exec("sh " + restartScript);
+                        builder = new ProcessBuilder("bash", "-c", restartScript);
                     }
+
+                    builder.inheritIO();
+                    builder.start();
+
                 } catch (Exception e) {
+                    System.err.println("[FearMC] Restart failed:");
                     e.printStackTrace();
                 }
-            });
+            }));
 
-            shutdownHook.setDaemon(true);
-            Runtime.getRuntime().addShutdownHook(shutdownHook);
             return true;
-        } else {
+
+        } catch (Exception e) {
             return false;
         }
     }
-    // Paper end
 }
